2011-08-02  Jason Merrill  <jason@redhat.com>

	PR c++/43886
	* parser.c (cp_parser_lambda_body): Clear local_variables_forbidden_p.

	PR c++/49593
	* pt.c (find_parameter_packs_r): Handle CONSTRUCTOR.

	PR c++/49803
	* init.c (sort_mem_initializers): Initialize uses_unions_p here.
	(build_field_list): Not here.

	PR c++/49924
	* semantics.c (cxx_eval_vec_init_1): Fix logic.

	PR c++/49260
	* call.c (build_call_a): Set cp_function_chain->can_throw here.
	(build_cxx_call): Not here.

2011-07-27  Jeffrey Yasskin  <jyasskin@google.com>

	* pt.c (build_template_decl): Copy the function_decl's
	source location to the new template_decl.

2011-07-19  Jason Merrill  <jason@redhat.com>

	PR c++/49785
	* pt.c (coerce_template_parms): Handle non-pack after pack.

2011-07-11  Jason Merrill  <jason@redhat.com>

	PR c++/49672
	* pt.c (extract_fnparm_pack): Split out from...
	(make_fnparm_pack): ...here.
	(instantiate_decl): Handle non-pack parms after a pack.
	* semantics.c (maybe_add_lambda_conv_op): Don't in a template.

2011-07-09  Jason Merrill  <jason@redhat.com>

	* tree.c (build_vec_init_elt): Strip TARGET_EXPR.

	* tree.c (build_vec_init_expr): Don't add TARGET_EXPR.
	* typeck2.c (digest_init_r): Handle VEC_INIT_EXPR.
	* semantics.c (cxx_eval_vec_init_1): Correct type.

2011-07-07  Jason Merrill  <jason@redhat.com>

	PR c++/48157
	* pt.c (tsubst_qualified_id): Preserve TEMPLATE_ID_EXPR in
	partial instantiation.

2011-07-07  Jakub Jelinek  <jakub@redhat.com>

	PR c/49644
	* typeck.c (cp_build_binary_op): For MULT_EXPR and TRUNC_DIV_EXPR with
	one non-complex and one complex argument, call save_expr on both
	operands.

2011-07-05  Jason Merrill  <jason@redhat.com>

	PR c++/49598
	* semantics.c (finish_id_expression): convert_from_reference.

	* error.c (type_to_string): Avoid redundant akas.

2011-06-27  Jason Merrill  <jason@redhat.com>

	PR c++/49528
	* semantics.c (potential_constant_expression_1): A TARGET_EXPR
	of non-literal type isn't constant.